@@ -8,22 +8,18 @@ import com.example.wuiz.quiz.response.QuestionResponse;
 import com.example.wuiz.quiz.response.QuizResponse;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 // Info: Maybe each response dto can have their own constructor with entity?
 
 @Component
 public class QuizDtoConverter {
 
   public QuizResponse quizToResponse(Quiz entity) {
-    var questions =
-        entity.getQuestions().stream().map(this::questionToResponse).collect(Collectors.toList());
+    var questions = entity.getQuestions().stream().map(this::questionToResponse).toList();
     return new QuizResponse(entity.getId(), entity.getTitle(), questions);
   }
 
   public QuestionResponse questionToResponse(Question entity) {
-    var options =
-        entity.getOptions().stream().map(this::optionToResponse).collect(Collectors.toList());
+    var options = entity.getOptions().stream().map(this::optionToResponse).toList();
     return new QuestionResponse(entity.getId(), entity.getText(), options);
   }
 
